--- a/DanielProject/DanielProject/templates/contact.html
+++ b/DanielProject/DanielProject/templates/contact.html
@@ -15,10 +15,11 @@
 
 
 
-    <p>
-        My name is daniel basik and i learning at tichonet school. my hobby is windsrfing .i'm traning 5 days a week, and 2 time a week i run. so all my
-        life is about sport.
-    </p>
+<p>
+    My name is daniel basik and i learning at tichonet school. my hobby is windsrfing .i'm traning 5 days a week, and 2 time a week i run. so all my
+    life is about sport.
+</p>
+<p><a href="https://www.facebook.com/Daniel-Basik-Tastash-Isr-930-Windsurfing-Its-My-Life-136534003609121/?ref=aymt_homepage_panel&eid=ARDCahcdyAT_ClexppozlfBCm-6SKF7mUtEf39YMIPH-8sTqB0eA-suOTkzMLKsQmjW1U3d-oPhvxIVt" class="btn btn-primary btn-large">learn about me here &raquo;</a></p>
 
 <tr>
     <td>
