--- a/DanielProject/DanielProject/templates/about.html
+++ b/DanielProject/DanielProject/templates/about.html
@@ -3,11 +3,16 @@
 {% block content %}
 
 <h2>{{ title }}</h2>
-<h3>{{ message }}</h3>
+
 
 <div class="col-md-8">
     <h2 class="heb">about the project</h2>
-    <p > The project is part of the "Data science" profession of the students of the 10th graders at the Alterman school in Tel Aviv. </p>
+    <p>
+        The project is part of the "Data science" profession of the students of the 10th graders at the Alterman school in Tel Aviv.
+        Because of the corona virus a lot of this work we did from home, and we called the teachers remotely in the zoom.
+        It was challenging because it was different but also a bit of fun.
+
+    </p>
 </div>
 <tr>
     <td>
