--- a/DanielProject/DanielProject/templates/DataModel.html
+++ b/DanielProject/DanielProject/templates/DataModel.html
@@ -10,7 +10,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-12" style="background-color: lightskyblue">
-            <p> I decide to use two different dataset to examine this topic and help users to undersend the phenomena</p>
+            <p> I decide to use two different dataset to examine this topic and help users to undersend the phenomena </p>
         </div>
     </div>
 </div>
@@ -35,7 +35,7 @@
             <p>top running records</p>
         </div>
         <div class="col-lg-4" style="background-color: lightgreen">
-            <p>This dataset holds all the top runung rercords </p>
+            <p>This dataset holds all the top running rercords </p>
         </div>
         <div class="col-lg-4" style="background-color: green">
             <p><a href="{{ url_for('DataSet1') }}">Go To DataSet Page</a></p>
